<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>group.worldstandard</groupId>
        <artifactId>pudel</artifactId>
        <version>2.1.1</version>
    </parent>

    <artifactId>pudel-core</artifactId>

    <licenses>
        <license>
            <name>GNU Affero General Public License v3</name>
            <url>https://raw.githubusercontent.com/World-Standard-Group/Pudel-Spring-Boot/refs/heads/main/LICENSE</url>
            <comments>This AGPLv3 contains Additional Terms from sector 7 as "PUDEL PLUGIN EXCEPTION"</comments>
        </license>
        <license>
            <name>PUDEL PLUGIN EXCEPTION</name>
            <url>https://raw.githubusercontent.com/World-Standard-Group/Pudel-Spring-Boot/refs/heads/main/PLUGIN_EXCEPTION</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>zazalng</id>
            <name>Napapon Kamanee</name>
            <email>zazalng.founder@worldstandard.group</email>
            <roles>
                <role>Founder</role>
            </roles>
            <organization>World Standard Group</organization>
            <organizationUrl>https://github.com/World-Standard-Group</organizationUrl>
        </developer>
    </developers>

    <issueManagement>
        <system>Github</system>
        <url>https://github.com/World-Standard-Group/Pudel-Spring-Boot/issues</url>
    </issueManagement>

    <properties>
        <maven.compiler.release>25</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdave.version>0.1.6</jdave.version>
        <jwt.version>0.13.0</jwt.version>
        <maven.deploy.skip>true</maven.deploy.skip>
    </properties>

    <dependencies>
        <!-- Spring Boot Web and Core -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-logging</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <!-- Swagger Ui -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>3.0.1</version>
        </dependency>
        <!-- Encryption for sensitive data -->
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-crypto</artifactId>
            <version>7.1.0-M2</version>
        </dependency>

        <!-- JWT Authentication -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${jwt.version}</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${jwt.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>${jwt.version}</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Discord API -->
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>${jda.version}</version>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-api</artifactId>
            <version>${jdave.version}</version>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-native-win-x86-64</artifactId>
            <version>${jdave.version}</version>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-native-linux-x86-64</artifactId>
            <version>${jdave.version}</version>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-native-linux-aarch64</artifactId>
            <version>${jdave.version}</version>
        </dependency>
        <dependency>
            <groupId>club.minnced</groupId>
            <artifactId>jdave-native-darwin</artifactId>
            <version>${jdave.version}</version>
        </dependency>

        <!-- Pudel API -->
        <dependency>
            <groupId>group.worldstandard</groupId>
            <artifactId>pudel-api</artifactId>
            <version>${pudel.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- Pudel Model (Ollama + Embeddings) -->
        <dependency>
            <groupId>group.worldstandard</groupId>
            <artifactId>pudel-model</artifactId>
            <version>${pudel.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- PostgreSQL Driver for persistence -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.10</version>
        </dependency>

        <!-- Apache Commons Lang -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.20.0</version>
        </dependency>

        <!-- JSON Processing -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${mvn.compiler.version}</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <parameters>true</parameters>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring.boot.version}</version>
                <configuration>
                    <mainClass>group.worldstandard.pudel.core.Pudel</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>